--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 #root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 1rem;
+  box-sizing: border-box;
 }
 
 .logo {
