--- a/src/component/Home/css/style.css
+++ b/src/component/Home/css/style.css
@@ -1061,6 +1061,15 @@ a:focus {
     font-weight: bold;
     color: #333;
   }
+  .review-card {
+    width: 100%;
+    height: 50vh;
+    background: white;
+    padding: 18px;
+    border-radius: 8px;
+    flex-shrink: 0;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .chauffeur-section {
@@ -1153,18 +1162,18 @@ a:focus {
   gap: 16px;
   overflow-x: auto;
   scroll-behavior: smooth;
-  padding: 0 40px;
+  padding: 24px 40px;
   margin-bottom: 43px;
   flex-wrap: wrap;
   margin-right: -15px;
-  margin-left: 45px;
+  margin-left: 5px;
 }
 
 .review-card {
   min-width: 250px;
   max-width: 250px;
   background: white;
-  padding: 16px;
+  padding: 18px;
   border-radius: 8px;
   flex-shrink: 0;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
