--- a/src/component/navbar/Navbar.css
+++ b/src/component/navbar/Navbar.css
@@ -84,11 +84,11 @@
   }
 
   .right-section {
+    display: flex !important;
     width: 100%;
-    justify-content: space-between;
+    justify-content: center !important;
     margin-top: 0;
   }
-
   .search-box {
     width: 100%;
     min-width: unset;
