--- a/src/component/reservation/component/Tomobiles/Car.css
+++ b/src/component/reservation/component/Tomobiles/Car.css
@@ -118,6 +118,7 @@
     flex-direction: column;
     padding: 37px;
     margin: 11px;
+    width: 95%;
   }
 
   .car-image-box {
@@ -126,7 +127,7 @@
   }
 
   .car-image {
-    max-height: 200px;
+    max-width: 75%;
     border-radius: 6px;
   }
 
