--- a/src/component/reservation/component/CardInfo/CardInfo.css
+++ b/src/component/reservation/component/CardInfo/CardInfo.css
@@ -70,12 +70,38 @@
 .continue-button:hover {
   background: linear-gradient(to right, #111, #444);
 }
-
+.card-pay {
+  border-radius: 16px; /* 4 * 4px = 16px */
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1); /* équivalent à boxShadow: 3 */
+  padding: 16px;
+  max-width: 350px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 40%;
+  background-color: white;
+}
+.card-content-pay {
+  display: flex;
+  flex-direction: column;
+}
 @media (max-width: 1024px) {
   .card-info {
     width: 95%;
     max-width: 100%;
     margin: 20px auto;
     padding: 16px;
+  }
+  .card-pay {
+    width: 95%;
+    max-width: 100%;
+    margin: 15px auto;
+    padding: 16px;
+    margin-top: -45px;
+    margin-bottom: 25px;
+  }
+  .card-content-pay {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
   }
 }
