--- a/src/component/reservation/component/GoogleMaps/GoogleMaps.css
+++ b/src/component/reservation/component/GoogleMaps/GoogleMaps.css
@@ -56,6 +56,36 @@
   min-width: 300px;
   max-width: 280px; /* facultatif */
 }
+.card-pay {
+  border-radius: 16px; /* 4 * 4px = 16px */
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1); /* équivalent à boxShadow: 3 */
+  padding: 16px;
+  max-width: 350px;
+  margin-left: auto;
+  margin-right: auto;
+
+  height: 70%;
+  background-color: white;
+}
+.card-content-pay {
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 1024px) {
+  .card-pay {
+    width: 95%;
+    max-width: 100%;
+    margin: 15px auto;
+    padding: 16px;
+    margin-top: 5px;
+    margin-bottom: 25px;
+  }
+  .card-content-pay {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+  }
+}
 /* Mobile adjustments: when screen width is less than 1280px */
 @media (max-width: 1280px) {
   .map-section {
