--- a/src/component/Home/css/style.css
+++ b/src/component/Home/css/style.css
@@ -1063,12 +1063,8 @@ a:focus {
   }
   .review-card {
     width: 100%;
-    height: 50vh;
-    background: white;
-    padding: 18px;
-    border-radius: 8px;
-    flex-shrink: 0;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    margin-left: 35px;
+    margin-bottom: 8px;
   }
 }
 
