--- a/src/component/reservation/component/Form/BookingForm.css
+++ b/src/component/reservation/component/Form/BookingForm.css
@@ -78,10 +78,9 @@
     background-color: white;
     border-radius: 16px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-    padding: 12px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+    padding: 9px;
+    margin-left: -50px;
+    width: 140%;
   }
   .booking-date-time {
     display: flex;
